# finn-cpp-driver

./: .clang-format  .clang-tidy  .gitignore  .gitlab-ci.yml  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  LICENSE  README.md  buildDependencies.sh  iwyu.imp
benchmarks/: CMakeLists.txt  CostumDynamicBitsetBenchmark.cpp  CustomDynamicBitsetBenchmark.cpp  DataPackingBenchmark.cpp  DeviceBufferBenchmark.cpp  DynamicMdSpanBenchmark.cpp  RingBufferBenchmark.cpp  SynchronousInferenceBenchmark.cpp  expectedPerformance.json
cmake/: AddBenchmark.cmake  AddIntegrationtest.cmake  AddUnittest.cmake  CheckSubmodules.cmake  ClangFormat.cmake  ClangTidy.cmake  CompilerWarnings.cmake  CppCheck.cmake  FindXRT.cmake  IWYU.cmake  InterproceduralOptimization.cmake  PreventInSourceBuilds.cmake  Sanitizers.cmake  StandardProjectSettings.cmake
docs/: Doxyfile.in
example_networks/identity_net/: README.md  config.json  driver.py  ident.onnx  ip_layout.json
example_networks/jet-structure-classification-with-host-mem/: FinnDatatypesJet.h
example_networks/jet-structure-classification-without-host-mem/: jetConfig.json
example_networks/single-layer-linear/: FinnDriverUsedDatatypes.h  cppdconfig.json  driver.py  ip_layout.json  testmodel.onnx
integrationtest/: AsyncInference.cpp  CMakeLists.txt  SyncInference.cpp
scripts/: init_submodules.sh  install_precommit.sh  pre-commit.template  run_test.sh
src/: CMakeLists.txt  DeviceBufferBenchmark.cpp  FINNDriver.cpp  config.h  main.cpp  template_driver.cpp  template_driver.hpp
src/FINNCppDriver/: CMakeLists.txt  FINNDriver.cpp  main.cpp  thresholds.h
src/FINNCppDriver/config/: CMakeLists.txt  CompilationOptions.h.in  FinnDriverUsedDatatypes.h  FinnDriverUsedDatatypes.h.in  exampleConfig.json  jetConfig.json
src/FINNCppDriver/core/: Accelerator.cpp  Accelerator.h  BaseDriver.hpp  CMakeLists.txt  DeviceBuffer.hpp  DeviceHandler.cpp  DeviceHandler.h
src/FINNCppDriver/core/DeviceBuffer/: AsyncDeviceBuffers.hpp  DeviceBuffer.hpp  SyncDeviceBuffers.hpp
src/FINNCppDriver/utils/: AlignedAllocator.hpp  CMakeLists.txt  ConfigurationStructs.h  CustomDynamicBitset.h  DataPacking.hpp  DoNotOptimize.h  DynamicMdSpan.hpp  FinnDatatypes.hpp  FinnUtils.h  Logger.cpp  Logger.h  RingBuffer.hpp  RingBufferNew.hpp  Timer.hpp  Types.h  join.hpp  mdspan.h
src/config/: FinnDriverUsedDatatypes.h  config.h  exampleConfig.json
src/core/: Accelerator.cpp  Accelerator.h  BaseDriver.hpp  CMakeLists.txt  DeviceBuffer.hpp  DeviceHandler.cpp  DeviceHandler.h  Driver.hpp
src/utils/: AlignedAllocator.hpp  CMakeLists.txt  ConfigurationStructs.h  CostumDynamicBitset.h  DataPacking.hpp  FinnDatatypes.hpp  FinnUtils.h  Logger.cpp  Logger.h  MemoryMap.hpp  RingBuffer.hpp  Timer.hpp  Types.h  createArray.hpp  deviceHandler.hpp  device_handler.hpp  driver.h  finnUtils.h  join.hpp  mdspan.h  memoryMap.h  ringBuffer.hpp
src/utils/finn_types/: datatype.h  datatype.hpp
unittests/: CMakeLists.txt  DeviceBufferBenchmark.cpp
unittests/config/: CMakeLists.txt  ConfigTest.cpp
unittests/core/: BaseDriverTest.cpp  CMakeLists.txt  DeviceBufferBenchmarkTest.cpp  DeviceBufferTest.cpp  DeviceHandlerTest.cpp  RingBufferTest.cpp  UnittestConfig.h
unittests/utils/: CMakeLists.txt  CostumDynamicBitsetTest.cpp  CustomDynamicBitsetTest.cpp  DataFoldingTest.cpp  DataPackingTest.cpp  DynamicMdSpanTest.cpp  FinnUtilsTest.cpp
unittests/xrtMock/: CMakeLists.txt  ert.h  xrt.h
unittests/xrtMock/experimental/: xclbin.cpp  xclbin.h  xrt_ip.h
unittests/xrtMock/xrt/: xrt_bo.cpp  xrt_bo.h  xrt_device.cpp  xrt_device.h  xrt_kernel.cpp  xrt_kernel.h  xrt_uuid.h
